# CardFlip

./: .gitignore  README.md
Client/Assets/: TempTest.cs  UiDebugOnce.cs  UniversalRenderPipelineGlobalSettings.asset
Client/Assets/Prefabs/: Avator.prefab  Avator2.prefab  Card.prefab  CardGrid.prefab  RoomSign.prefab  UiDebugOnce.prefab
Client/Assets/Scenes/: GameScene.unity  LoginScene.unity  SampleScene.unity
Client/Assets/Script/: CardGridManager.cs  GameManager.cs  LoginManager.cs  RoomCreateButton.cs  SessionInfo.cs  TcpClientManager.cs  UdpClientManager.cs
Client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Server/: CMakeLists.txt
Server/common/: CMakeLists.txt  common.hpp  net.hpp  protocol.hpp  소스.cpp
Server/gateway/: CMakeLists.txt  Server.cpp  Server.hpp  Session.cpp  Session.hpp  WorldServerLinker.cpp  WorldServerLinker.hpp  gateway.cpp
Server/world/: CMakeLists.txt  Room.cpp  Room.hpp  TcpAcceptor.cpp  TcpAcceptor.hpp  TcpSession.cpp  TcpSession.hpp  UdpSessionManager.cpp  UdpSessionManager.hpp  world.cpp  world.hpp
